# mujoco-manip

./: .gitignore  README.md  main.py  pick_and_place_scene.xml  pyproject.toml  requirements.txt  setup_menagerie.sh
.github/workflows/: ci.yml
configs/: generate.yaml
mujoco_manip/: __init__.py  constants.py  env.py  features.py  gym_env.py  pick_and_place.py  pose_utils.py  randomization.py  robot.py
mujoco_manip/data/: __init__.py  pick_and_place_scene.xml
scripts/: generate_dataset.py  replay_actions.py  visualize_dataset.py
scripts/debug/: tune_wrist_camera.py
src/: cameras.py  constants.py  controller.py  env.py  features.py  gym_env.py  pick_and_place.py  pose_utils.py  robot.py
tests/: test_controller.py  test_gym_env.py  test_pick_and_place.py  test_pose_utils.py  test_randomization.py
