[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "mujoco-manip"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.5.0",
    "numpy>=2.0",
    "gymnasium>=1.0.0",
    "hydra-core>=1.3.0",
    "lerobot>=0.4.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.uv.build-backend]
module-root = ""

[tool.ruff.format]
docstring-code-format = true
